2007-10-20  Matthieu Nottale  <nottale@gostai.com>

	USyncClient::processEvents().
	* include/urbi/usyncclient.hh,
	* src/liburbi/usyncclient.cc: processEvent, perform one step of the
	  callback handling thread.

2007-10-20  Akim Demaille  <akim.demaille@free.fr>

	Fix English.
	* src/liburbi/uobject/urbi/ucallbacks.hh.template: Fix a
	comment and indentation.

2007-10-19  Matthieu Nottale  <nottale@gostai.com>

	Add an option on uobject remote command line: exit on disconnect.
	* src/liburbi/uobject.cc: Pass -d between the host and port options
	to have the program exited on connection error.

2007-10-18  Matthieu Nottale  <nottale@gostai.com>

	Notify a callback on socket error.
	* include/urbi/uabstractclient.hh,
	* src/liburbi/uabstractclient.cc: add setClientErrorCallback, 
	  add clientError that generates an error UMessage and
	  notifyCallbacks().
	* src/liburbi/uclient.cc: call clientError() on socket error.

2007-10-18  Matthieu Nottale  <nottale@gostai.com>

	Fix disconnection detection in liburbi.
	* uclient.cc: Block SIGPIPE, include the socket FD in the error
	 FD_SET in select, treat a return value of 0 from recv as an error
	 (nominal disconnection).
	* uconversion.cc: Replace an int by a long to fix a warning on amd64.

2007-10-15  Akim Demaille  <demaille@gostai.com>

	merge -r 478:514 https://svn.gostai.com/svn/liburbi-cpp/branches/1.0

	2007-10-01  Guillaume Deslandes  <deslandes@gostai.com>
	Add back_cast for boolean
	* src/liburbi/uobject/urbi/uobject.hh.template: Here.

	2007-10-01  Guillaume Deslandes  <deslandes@gostai.com>
	Add missing prototypes for UNotify*
	* src/liburbi/uobject/urbi/uobject.hh.template: Here.

	2007-09-28  Guillaume Deslandes  <deslandes@gostai.com>
	Reactivate doc dir
	* Makefile.am: Here.

	2007-09-28  POTHIER Benoit  <pothier@gostai.com>
	Rename sample projects.
	* sample_projects/liburbi/windows - devcpp/test.cpp: Remove.
	* sample_projects/liburbi/windows - devcpp/test.dev: Remove.